Setup module catalog with one module.

--- a/Prisma/Prisma.Infrastructure/Prisma.Infrastructure.csproj
+++ b/Prisma/Prisma.Infrastructure/Prisma.Infrastructure.csproj
@@ -5,4 +5,16 @@
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <OutputPath>D:\Development\prisma\Prisma\bin\debug</OutputPath>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <OutputPath>D:\Development\prisma\Prisma\bin\release</OutputPath>
+  </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Prism.Unity" Version="8.1.97" />
+  </ItemGroup>
+
 </Project>
