Loading main modules in tab view

--- a/Prisma/Prisma/App.config
+++ b/Prisma/Prisma/App.config
@@ -5,10 +5,22 @@
   </configSections>
 
   <modules>
-    <module 
-      assemblyFile="Prisma.Warehouse.dll" 
-      moduleType="Prisma.Warehouse.WarehouseModule, Prisma.Warehouse, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null" 
-      moduleName="WarehouseModule" 
+    
+    <!--
+      -
+      -  Main modules, note that the order of loading in the tab is reversed like FIFO
+      -
+    -->
+
+    <module
+      assemblyFile="Prisma.Studio.dll"
+      moduleType="Prisma.Studio.StudioModule, Prisma.Studio, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null"
+      moduleName="StudioModule"
+      startupLoaded="true" />
+    <module
+      assemblyFile="Prisma.Warehouse.dll"
+      moduleType="Prisma.Warehouse.WarehouseModule, Prisma.Warehouse, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null"
+      moduleName="WarehouseModule"
       startupLoaded="true" />
   </modules>
 </configuration>
