--- a/Prisma/Prisma.Warehouse/Prisma.Warehouse.csproj
+++ b/Prisma/Prisma.Warehouse/Prisma.Warehouse.csproj
@@ -17,4 +17,8 @@
     <PackageReference Include="Prism.Unity" Version="8.1.97" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Prisma.Infrastructure\Prisma.Infrastructure.csproj" />
+  </ItemGroup>
+
 </Project>
