Changed TabControl by RibbonTab

--- a/Prisma/Prisma.Studio/Prisma.Studio.csproj
+++ b/Prisma/Prisma.Studio/Prisma.Studio.csproj
@@ -21,4 +21,17 @@
     <ProjectReference Include="..\Prisma.Infrastructure\Prisma.Infrastructure.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Compile Update="Views\RibbonTabView.xaml.cs">
+      <SubType>Code</SubType>
+    </Compile>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Page Update="Views\RibbonTabView.xaml">
+      <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
+      <SubType>Designer</SubType>
+    </Page>
+  </ItemGroup>
+
 </Project>
