Added new Browser view

--- a/Prisma/Prisma.Warehouse/Prisma.Warehouse.csproj
+++ b/Prisma/Prisma.Warehouse/Prisma.Warehouse.csproj
@@ -21,4 +21,8 @@
     <ProjectReference Include="..\Prisma.Infrastructure\Prisma.Infrastructure.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Models\" />
+  </ItemGroup>
+
 </Project>
