--- a/Prisma/Prisma.Infrastructure/Prisma.Infrastructure.csproj
+++ b/Prisma/Prisma.Infrastructure/Prisma.Infrastructure.csproj
@@ -14,7 +14,15 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Resources\pgnfile.gif" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Prism.Unity" Version="8.1.97" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Resource Include="Resources\pgnfile.gif" />
   </ItemGroup>
 
 </Project>
